--- a/.github/workflows/expense.yml
+++ b/.github/workflows/expense.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Bootcamp Class 3
+name: Tracker App
 
 # Controls when the action will run. 
 on:
